package ua.khpi.oop.malokhvii07.navigation.component;

public interface NavigationComponentBuilder {

    NavigationComponent build();
}
